--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-mysql-counter-app",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "private": true,
   "description": "Simple Node.js app with Postgres",
   "main": "app.js",
@@ -14,7 +14,7 @@
     "start": "node app.js",
     "prepare": "husky install"
   },
-  "author": "Kirill M",
+  "author": "Aleksandr Mazurov",
   "license": "MIT",
   "devDependencies": {
     "husky": "^8.0.0"
