--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -51,6 +51,6 @@ jobs:
       run: |
         git config --local user.email "mazurovsasha@gmail.com"
         git config --local user.name "Alexsandr Mazurov"
-        git add ./temp/project/values.yaml
+        git add --all
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git push -u origin master
