Add step for version change7

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -41,6 +41,7 @@ jobs:
       with:
         repository: Mazurovsasha/project-helm
         path: ./temp
+        token: ${{ secrets.PROJECT_TOKEN }}
 
     - name: Update values.yaml
       run: |
