--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -52,6 +52,7 @@ jobs:
       run: |
         git config --local user.email "mazurovsasha@gmail.com"
         git config --local user.name "Alexsandr Mazurov"
+        git remote add origin git@github.com:Mazurovsasha/project-helm.git
         git add --all
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git push -u origin master
