--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -49,12 +49,12 @@ jobs:
         cat ./temp/project/values.yaml
       
     - name: Commit and push changes to values.yaml
-      with:
-        token: ${{ secrets.PROJECT_TOKEN }}
       run: |
         git config --local user.email "mazurovsasha@gmail.com"
         git config --local user.name "Alexsandr Mazurov"
+        git status
         git add --all
+        git status
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git push -u origin master
       
