Add step for version change16

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -52,7 +52,7 @@ jobs:
       run: |
         git config --local user.email "mazurovsasha@gmail.com"
         git config --local user.name "Alexsandr Mazurov"
-        echo git status
+        echo 'git status'
         # git add ./temp
         # git status
         # git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
