--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -59,7 +59,7 @@ jobs:
 
     - name: Push changes
       uses: actions-go/push@v1
-      # with:
+      with:
       #   # Override the existing remote branch if it already exist
       #   force: # optional
       #   # The email that will appear in commits when changes needs to be committed
@@ -82,5 +82,5 @@ jobs:
       #   fail-if-empty: # optional
       #   # Auth token used to fetch the repository. The token is stored in the local git config, which enables your scripts to run authenticated git commands. The post-job step removes the token from the git config. [Learn more about creating and using encrypted secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
 
-      #   token: # optional, default is ${{ github.token }}
+        token: ${{ secrets.PROJECT_TOKEN }}
       
