--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -58,29 +58,46 @@ jobs:
         # git push -u origin master
 
     - name: Push changes
-      uses: actions-go/push@v1
+      uses: appleboy/git-push-action@v0.0.3
       with:
-      #   # Override the existing remote branch if it already exist
-      #   force: # optional
-      #   # The email that will appear in commits when changes needs to be committed
-      #   author-email: # optional, default is actions-go@users.noreply.github.com
-      #   # The name that will appear in commits when changes needs to be committed
-      #   author-name: # optional, default is ActionsGo Bot
-      #   # Instructs to create a commit with changed files
-      #   create-commit: # optional, default is true
-      #   # A coma separated list of files to add to commit in addition to already staged ones. If not provided, all tracked files are committed.
-      #   commit-files: # optional
-      #   # The commit message used when changes needs to be committed
-      #   commit-message: 
-      #   # The name of the local reference to push.
-      #   ref: # optional, default is ${{ github.ref }}
-      #   # The name of the remote on which to push the changes. Defaults to the tracked remote
-      #   remote: # optional, default is origin
-      #   # The name of the remote reference to pushto. Defaults to the tracked remote branch.
-      #   remote-ref: # optional, default is ${{ github.ref }}
-      #   # Fail the action in case there is nothing to do.
-      #   fail-if-empty: # optional
-      #   # Auth token used to fetch the repository. The token is stored in the local git config, which enables your scripts to run authenticated git commands. The post-job step removes the token from the git config. [Learn more about creating and using encrypted secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
-
-        token: ${{ secrets.PROJECT_TOKEN }}
+        # git author name
+        author_name: "Alexsandr Mazurov"
+        # git author email
+        author_email: "mazurovsasha@gmail.com"
+        # # netrc machine
+        # netrc_machine: # optional
+        # # netrc username
+        # netrc_username: # optional
+        # # netrc password
+        # netrc_password: # optional
+        # # private ssh key
+        # ssh_key: # optional
+        # # url of the remote repo
+        remote: https://github.com/Mazurovsasha/project-helm.git
+        # # name of the remote repo
+        # remote_name: # optional, default is deploy
+        # name of remote branch
+        branch: master
+        # # name of local branch
+        # local_branch: # optional, default is HEAD
+        # path to git repo
+        path: ./tmp
+        # # force push to remote
+        # force: # optional
+        # push to remote with tags
+        # followtags: # optional
+        # # skip ssl verification
+        # skip_verify: # optional
+        # # commit dirty changes
+        # commit: # optional
+        # commit message
+        commit_message: "Update values.yaml v${{ steps.get_version.outputs.version }}"
+        # # tag to add to the commit
+        # tag: # optional
+        # # allow empty commit
+        # empty_commit: # optional
+        # # bypasses the pre-commit and commit-msg hooks
+        # no_verify: # optional
+        # # rebase local branch on top of remote branch
+        # rebase: # optional
       
