--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -50,16 +50,9 @@ jobs:
       
     - name: Commit and push changes to values.yaml
       run: |
-        git config --local user.email "mazurovsasha@gmail.com"
-        git config --local user.name "Alexsandr Mazurov"
+        # git config --local user.email "mazurovsasha@gmail.com"
+        # git config --local user.name "Alexsandr Mazurov"
         git add --all
-        # git status
-        # git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
-        # git push -u origin master
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.PROJECT_TOKEN }}
-        branch: "master"
-      
+        git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
+        export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
+        git push --force --set-upstream origin master "${GH_TOKEN}"
