--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -52,7 +52,7 @@ jobs:
       run: |
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "Alexsandr Mazurov"
-        git add --all
+        git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
         export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
