--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -52,6 +52,7 @@ jobs:
       run: |
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "Alexsandr Mazurov"
+        git branch -m <master>
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
