Add step for version change32

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -40,13 +40,13 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: Mazurovsasha/project-helm
-        path: ./temp
+        path: ./
         token: ${{ secrets.PROJECT_TOKEN }}
 
     - name: Update values.yaml
       run: |
-        sed -i 's/tag:.*/tag: ${{ steps.get_version.outputs.version }}/g' ./temp/project/values.yaml
-        cat ./temp/project/values.yaml
+        sed -i 's/tag:.*/tag: ${{ steps.get_version.outputs.version }}/g' ./project/values.yaml
+        cat ./project/values.yaml
       
     # - name: Commit and push changes to values.yaml
     #   run: |
@@ -64,7 +64,6 @@ jobs:
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "Alexsandr Mazurov"
         git branch -m master
-        git rm --cached temp
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
