Add step for version change38

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -41,7 +41,7 @@ jobs:
       with:
         repository: Mazurovsasha/project-helm
         path: .
-        token: ${{ secrets.PROJECT_TOKEN }}
+        # token: ${{ secrets.PROJECT_TOKEN }}
 
     - name: Update values.yaml
       run: |
@@ -68,5 +68,5 @@ jobs:
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
-        export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
-        git push --force --set-upstream helm-origin master "${GH_TOKEN}"
+        # export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
+        # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
