--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -70,3 +70,4 @@ jobs:
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
         # export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
         # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
+        git push helm-origin master
