Add step for version change40

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -68,6 +68,6 @@ jobs:
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
-        # export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
+        export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
         # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
-        git push helm-origin master
+        git push helm-origin master "${GH_TOKEN}"
