Add step for version change41

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -61,13 +61,13 @@ jobs:
 
     - name: Commit and push changes to values.yaml
       run: |
+        export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
         cd /home/runner/work/project/project/project/
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "Alexsandr Mazurov"
         git branch -m master
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
-        git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
-        export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
+        git remote add helm-origin https://"${GH_TOKEN}"github.com/Mazurovsasha/project-helm.git
         # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
-        git push helm-origin master "${GH_TOKEN}"
+        git push -u helm-origin master
