--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -56,17 +56,13 @@ jobs:
         # git branch -m master
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
-        git remote add helm-origin https://github.com/Mazurovsasha/project-helm.git
+        git remote rm origin
+        git remote add origin https://github.com/Mazurovsasha/project-helm.git
         git remote set-url helm-origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
         # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
-        # git push 
+        git push 
 
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.PROJECT_TOKEN }}
-        repository: Mazurovsasha/project-helm
-        branch: master
+
     # - name: Git Commit Push Action
     #   uses: GuillaumeFalourd/git-commit-push@v1.3
     #   with:
