--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -60,7 +60,7 @@ jobs:
         git remote add origin https://github.com/Mazurovsasha/project-helm.git
         git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
         # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
-        git push 
+        git push --set-upstream origin master 
 
 
     # - name: Git Commit Push Action
