Add step for version change66

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -54,7 +54,7 @@ jobs:
         # export GH_TOKEN=${{ secrets.PROJECT_TOKEN }}
         cd /home/runner/work/project/project/project/
         git config --global user.email "mazurovsasha@gmail.com"
-        git config --global user.name "Alexsandr Mazurov"
+        git config --global user.name "Mazurovsasha"
         git config credential.username "Mazurovsasha"
         # git branch -m master
         git add .
