--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,14 +29,13 @@ jobs:
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "Mazurovsasha"
         git config credential.username "Mazurovsasha"
-        # git branch -m master
-        git add .
-        git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
+        # git branch -m master       
         git remote rm origin
         git remote add origin https://github.com/Mazurovsasha/project-helm.git
-        git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
-        # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
+        git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.gi
         git config -l
+        git add .
+        git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git push --set-upstream origin master 
 
 
