--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -58,12 +58,13 @@ jobs:
         # git branch -m master
         git status
         git add .
+        git status
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         git push https://${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git HEAD:branch
         # git remote rm origin
         # git remote add origin https://github.com/Mazurovsasha/project-helm.git
         # git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
-        # # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
+        # git push --force --set-upstream helm-origin master "${GH_TOKEN}"
         # git push --set-upstream origin master 
 
 
