--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -55,10 +55,11 @@ jobs:
         git config --global user.email "mazurovsasha@gmail.com"
         git config --global user.name "{{ secrets.NAME }}"
         git config credential.username "{{ secrets.NAME }}"
+        git config credential.helper "store --file=.git/credentials"
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
-        git push https://github.com/Mazurovsasha/project-helm.git 
-        # git push https://${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git HEAD:branch
+        # git push https://github.com/Mazurovsasha/project-helm.git 
+        git push https://${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
         # git remote rm origin
         # git remote add origin https://github.com/Mazurovsasha/project-helm.git
         # git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
