--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -59,7 +59,7 @@ jobs:
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
         # git push https://github.com/Mazurovsasha/project-helm.git 
-        git push https://${{ secrets.NAME }}:{{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
+        git push https://"${{ secrets.NAME }}":"{{ secrets.PROJECT_TOKEN }}"@github.com/Mazurovsasha/project-helm.git
         # git remote rm origin
         # git remote add origin https://github.com/Mazurovsasha/project-helm.git
         # git remote set-url origin https://x-access-token:${{ secrets.PROJECT_TOKEN }}@github.com/Mazurovsasha/project-helm.git
