--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -58,6 +58,7 @@ jobs:
         git config credential.helper "store --file=.git/credentials"
         git add .
         git commit -m "Update values.yaml v${{ steps.get_version.outputs.version }}"
+        git remote rm origin
         git remote add origin https://"Mazurovsasha":"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"@github.com/Mazurovsasha/project-helm.git
         git push
         # git remote rm origin
