Add helm lint and slack natif

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -88,7 +88,7 @@ jobs:
         SLACK_CHANNEL: 'project_slack'
         SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#FF00FF'
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: 'New Docker image tag: ${{ steps.get_version.outputs.version }} :rocket:'
+        SLACK_MESSAGE: 'New Docker image tag: ${{ steps.get_version.outputs.version }} :rocket:, ${{ env.SLACK_MESSAGE }}'
         SLACK_TITLE: Post Title
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
