--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -82,13 +82,26 @@ jobs:
         git remote add origin git@github.com:Mazurovsasha/project-helm.git
         git push -u origin master
 
-    - name: Slack Notification
+    - name: Slack Notification Build and push Docker image
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_CHANNEL: 'project_slack'
         SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#FF00FF'
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: 'New Docker image tag: ${{ steps.get_version.outputs.version }} :rocket:, ${{ env.SLACK_MESSAGE }}'
+        SLACK_MESSAGE: 'New Docker image with tag: ${{ steps.get_version.outputs.version }} :rocket:'
+        SLACK_TITLE: Post Title
+        SLACK_USERNAME: rtCamp
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      with:
+       status: ${{ job.status }}
+
+    - name: Slack Notification helm lint
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_CHANNEL: 'project_slack'
+        SLACK_COLOR: ${{ env.SLACK_COLOR }}
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: ${{ env.SLACK_MESSAGE }}
         SLACK_TITLE: Post Title
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
