--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -101,7 +101,7 @@ jobs:
         SLACK_CHANNEL: 'project_slack'
         SLACK_COLOR: ${{ env.SLACK_COLOR }}
         SLACK_ICON: https://github.com/rtCamp.png?size=48
-        SLACK_MESSAGE: ${{ env.SLACK_MESSAGE }}
+        SLACK_MESSAGE: '${{ env.SLACK_MESSAGE }}'
         SLACK_TITLE: Post Title
         SLACK_USERNAME: rtCamp
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
