--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -54,12 +54,12 @@ jobs:
         helm lint ./project
         if [ $? -eq 0 ]; then
           echo "Helm lint passed successfully"
-          SLACK_COLOR="good"
-            SLACK_MESSAGE="Helm lint passed successfully :white_check_mark:"
+          echo "::set-env name=SLACK_COLOR::good"
+          echo "::set-env name=SLACK_MESSAGE::Helm lint passed successfully :white_check_mark:"
         else
           echo "Helm lint failed"
-          SLACK_COLOR="danger"
-          SLACK_MESSAGE="Helm lint failed :x:"
+          echo "::set-env name=SLACK_COLOR::danger"
+          echo "::set-env name=SLACK_MESSAGE::Helm lint failed :x:"
         fi
 
     - name: Set up SSH keys
