--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -54,12 +54,12 @@ jobs:
         helm lint ./project
         if [ $? -eq 0 ]; then
           echo "Helm lint passed successfully"
-          echo "::set-env name=SLACK_COLOR::good"
-          echo "::set-env name=SLACK_MESSAGE::Helm lint passed successfully :white_check_mark:"
+          echo "SLACK_COLOR=good" >> $GITHUB_ENV
+          echo "SLACK_MESSAGE=Helm lint passed successfully :white_check_mark:" >> $GITHUB_ENV
         else
           echo "Helm lint failed"
-          echo "::set-env name=SLACK_COLOR::danger"
-          echo "::set-env name=SLACK_MESSAGE::Helm lint failed :x:"
+          echo "SLACK_COLOR=danger" >> $GITHUB_ENV
+          echo "SLACK_MESSAGE=Helm lint failed :x:" >> $GITHUB_ENV
         fi
 
     - name: Set up SSH keys
