--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,9 +1,10 @@
 name: Docker Build and Publish
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master
 
 jobs:
   build_and_publish:
