--- a/.github/workflows/hw17.yaml
+++ b/.github/workflows/hw17.yaml
@@ -17,7 +17,11 @@ jobs:
       run: |
         docker build -t test-image .
         docker run -d --name test-container test-image
+
+    - name: Test by requesting data from imager
+      run: |
+        docker exec test-container curl http://localhost
               
-    - name: Check for root access inside the container
+    - name: Test if image has not root access inside
       run: |
         docker exec test-container id 
